[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mega-framework"
version = "0.1.0"
description = "Framework starting with OpenCDA as first submodule"
authors = [
  { name = "Dhia Neifar", email = "your_email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
