[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mega-framework"
version = "0.1.0"
description = "OpenCPM: A centralized framework that simulates advesarial dataset creation of Cooperative Perception Messages."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Dhia Neifar", email = "neifar@umich.edu" }]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
